--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,13 @@
 	<name>Advanced Encryption Standard</name>
 
 	<groupId>ch.bettelini</groupId>
-	<artifactId>aes</artifactId>
+	<artifactId>aes-all</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<java.version>11</java.version>
-	</properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	
-	<!-- Build runnable jar -->
+	<modules>
+		<module>aes</module>
+		<module>app</module>
+	</modules>
 
 </project>
