--- a/app/pom.xml
+++ b/app/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>ch.bettelini</groupId>
 	<artifactId>aes-app</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
     <parent>
         <groupId>ch.bettelini</groupId>
@@ -27,6 +28,29 @@
 		</dependency>
 	</dependencies>
 
-	<!-- Build runnable jar -->
+	<build>
+		<plugins>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-shade-plugin</artifactId>
+			<version>3.2.4</version>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+					<configuration>
+						<transformers>
+							<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<mainClass>ch.bettelini.app.App</mainClass>
+							</transformer>
+						</transformers>
+					</configuration>
+				</execution>
+			</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
