--- a/aes/pom.xml
+++ b/aes/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ch.bettelini</groupId>
-	<artifactId>aes-java</artifactId>
+	<artifactId>aes</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<parent>
