--- a/app/pom.xml
+++ b/app/pom.xml
@@ -23,7 +23,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>ch.bettelini</groupId>
-			<artifactId>aes-java</artifactId>
+			<artifactId>aes</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
